Compiler/tests/typing/bad/testfile-call-4.rs

fn foo(x: i32, y: bool) {}
fn main() { foo(true, 42); }
